change error number return to throw exception, and add more methods

--- a/bin/BUILD
+++ b/bin/BUILD
@@ -1,5 +1,8 @@
 cc_binary(
     name = "zinlidac",
     srcs = ["main.cpp"],
-    deps = ["//lib:hardware/hardware"],
+    deps = [
+        "//lib/hardware:hardware",
+        "//lib/system:system"
+    ],
 )
