add more methods of hardware and system

--- a/lib/system/BUILD
+++ b/lib/system/BUILD
@@ -1,7 +1,10 @@
 cc_library(
     name = "system",
     srcs = [
+        "os.cpp",
         "filesystem.cpp",
+        "time.cpp",
+        "locale.cpp"
     ],
     hdrs = [
         "system.h", 
