add noexcept and fix linking bug

--- a/lib/system/BUILD
+++ b/lib/system/BUILD
@@ -16,4 +16,8 @@ cc_library(
     deps = [
         "//lib/error:error",
     ],
+    linkopts = [
+        # see https://stackoverflow.com/a/58846856/10005095
+        "-lprocps",
+    ],
 )
