add network methods, leaving regex match bug

--- a/bin/BUILD
+++ b/bin/BUILD
@@ -2,6 +2,7 @@ cc_binary(
     name = "zinlidac",
     srcs = ["main.cpp"],
     deps = [
+        "//lib/error:error",
         "//lib/hardware:hardware",
         "//lib/system:system"
     ],
