add more python interfaces and fix bugs

--- a/lib/hardware/BUILD
+++ b/lib/hardware/BUILD
@@ -4,6 +4,7 @@ cc_library(
         "cpu.cpp",
         "cache.cpp",
         "memory.cpp",
+        "util.cpp"
     ],
     hdrs = [
         "hardware.h", 
