--- a/python-wrapper/BUILD
+++ b/python-wrapper/BUILD
@@ -1,9 +1,11 @@
 cc_binary(
-    name = "libzinlidac.so",
+    name = "libzinlidacpy.so",
+    srcs = ["python-interface.cpp"],
     deps = [
         "//lib/error:error",
         "//lib/hardware:hardware",
         "//lib/system:system",
+        "@boost//:python"
     ],
     linkshared = True,
 )
